@@ -16,11 +16,12 @@
  */
 package uk.ac.manchester.spinnaker.machine;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
+import java.util.List;
 import java.util.NoSuchElementException;
 import static org.junit.jupiter.api.Assertions.*;
+import static uk.ac.manchester.spinnaker.machine.ChipLocation.ONE_ZERO;
+import static uk.ac.manchester.spinnaker.machine.ChipLocation.ZERO_ZERO;
+
 import org.junit.jupiter.api.Test;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
@@ -39,7 +40,7 @@ public class TestCoreSubsets {
 	 */
 	@Test
 	public void testBasic() {
-		CoreSubsets instance = new CoreSubsets();
+		var instance = new CoreSubsets();
 		assertEquals(0, instance.size());
 		assertTrue(instance.isEmpty());
 
@@ -47,19 +48,16 @@ public class TestCoreSubsets {
 		assertEquals(1, instance.size());
 		assertFalse(instance.isEmpty());
 
-		ArrayList<Integer> processors = new ArrayList<>();
-		processors.add(1);
-		instance.addCores(0, 0, processors);
+		instance.addCores(0, 0, List.of(1));
 		assertEquals(1, instance.size());
 		assertFalse(instance.isEmpty());
-		assertFalse(instance.isChip(ChipLocation.ONE_ZERO));
+		assertFalse(instance.isChip(ONE_ZERO));
 
-		processors.add(2);
-		instance.addCores(1, 0, processors);
+		instance.addCores(1, 0, List.of(1, 2));
 		assertEquals(3, instance.size());
 		assertFalse(instance.isEmpty());
 
-		assertTrue(instance.isChip(ChipLocation.ONE_ZERO));
+		assertTrue(instance.isChip(ONE_ZERO));
 		assertTrue(instance.isCore(new CoreLocation(0, 0, 1)));
 		assertFalse(instance.isCore(new CoreLocation(2, 0, 1)));
 		assertFalse(instance.isChip(new ChipLocation(3, 1)));
@@ -68,7 +66,7 @@ public class TestCoreSubsets {
 
 	@Test
 	public void testAdd() {
-		CoreSubsets instance = new CoreSubsets();
+		var instance = new CoreSubsets();
 		instance.addCore(new CoreLocation(0, 0, 1));
 		// get hashcode to make subset immutable
 		@SuppressWarnings("unused")
@@ -77,7 +75,7 @@ public class TestCoreSubsets {
 			instance.addCore(new CoreLocation(0, 0, 2));
 		});
 		assertThrows(IllegalStateException.class, () -> {
-			instance.addCores(new ChipLocation(0, 0), Arrays.asList(1, 2, 3));
+			instance.addCores(new ChipLocation(0, 0), List.of(1, 2, 3));
 		});
 		assertThrows(IllegalStateException.class, () -> {
 			instance.addCore(new ChipLocation(0, 0), 2);
@@ -85,26 +83,17 @@ public class TestCoreSubsets {
 	}
 
 	public void testMultiple() {
-		ArrayList<CoreLocation> locations = new ArrayList<>();
-		locations.add(new CoreLocation(0, 0, 1));
-		locations.add(new CoreLocation(0, 0, 2));
-		locations.add(new CoreLocation(0, 0, 3));
-		locations.add(new CoreLocation(0, 1, 1));
-		locations.add(new CoreLocation(0, 1, 2));
-		locations.add(new CoreLocation(0, 1, 3));
-		locations.add(new CoreLocation(0, 0, 1));
-		locations.add(new CoreLocation(0, 0, 2));
-		locations.add(new CoreLocation(0, 0, 3));
-		locations.add(new CoreLocation(0, 0, 1));
-		locations.add(new CoreLocation(0, 0, 2));
-		locations.add(new CoreLocation(0, 0, 3));
-		locations.add(new CoreLocation(0, 0, 4));
-		CoreSubsets css = new CoreSubsets(locations);
+		var locations = List.of(new CoreLocation(0, 0, 1),
+				new CoreLocation(0, 0, 2), new CoreLocation(0, 0, 3),
+				new CoreLocation(0, 1, 1), new CoreLocation(0, 1, 2),
+				new CoreLocation(0, 1, 3), new CoreLocation(0, 0, 1),
+				new CoreLocation(0, 0, 2), new CoreLocation(0, 0, 3),
+				new CoreLocation(0, 0, 1), new CoreLocation(0, 0, 2),
+				new CoreLocation(0, 0, 3), new CoreLocation(0, 0, 4));
+		var css = new CoreSubsets(locations);
 
-		ArrayList<CoreLocation> locations2 = new ArrayList<>();
-		locations2.add(new CoreLocation(0, 0, 4));
-		locations2.add(new CoreLocation(0, 0, 5));
-		locations2.add(new CoreLocation(0, 0, 6));
+		var locations2 = List.of(new CoreLocation(0, 0, 4),
+				new CoreLocation(0, 0, 5), new CoreLocation(0, 0, 6));
 		css.addCores(locations2);
 
 		assertTrue(css.isChip(new ChipLocation(0, 1)));
@@ -113,15 +102,14 @@ public class TestCoreSubsets {
 		assertTrue(css.isCore(new CoreLocation(0, 1, 3)));
 
 		int count = 0;
-		for (CoreLocation coreLocation : css) {
+		for (var coreLocation : css) {
 			count += 1;
 			assertEquals(0, coreLocation.getX());
 		}
 		assertEquals(9, count);
 
 		count = 0;
-		for (CoreLocation coreLocation : css
-				.coreByChip(ChipLocation.ZERO_ZERO)) {
+		for (var coreLocation : css.coreByChip(ZERO_ZERO)) {
 			count += 1;
 			assertEquals(0, coreLocation.getX());
 			assertEquals(0, coreLocation.getY());
@@ -130,23 +118,23 @@ public class TestCoreSubsets {
 	}
 
 	public void testInterest() {
-		CoreSubsets css1 = new CoreSubsets();
-		css1.addCores(new ChipLocation(0, 0), Arrays.asList(1, 2, 3));
-		css1.addCores(new ChipLocation(0, 1), Arrays.asList(1, 2, 3));
+		var css1 = new CoreSubsets();
+		css1.addCores(new ChipLocation(0, 0), List.of(1, 2, 3));
+		css1.addCores(new ChipLocation(0, 1), List.of(1, 2, 3));
 		css1.addCore(new ChipLocation(1, 1), 1);
 		css1.addCore(new ChipLocation(2, 2), 1);
 		assertEquals(8, css1.size());
 		assertFalse(css1.isEmpty());
 
-		CoreSubsets css2 = new CoreSubsets();
-		css2.addCores(new ChipLocation(0, 0), Arrays.asList(2, 3, 5));
-		css2.addCores(new ChipLocation(1, 0), Arrays.asList(1, 2, 3));
-		css2.addCores(new ChipLocation(1, 1), Arrays.asList(9, 7, 1, 5));
+		var css2 = new CoreSubsets();
+		css2.addCores(new ChipLocation(0, 0), List.of(2, 3, 5));
+		css2.addCores(new ChipLocation(1, 0), List.of(1, 2, 3));
+		css2.addCores(new ChipLocation(1, 1), List.of(9, 7, 1, 5));
 		css2.addCore(new ChipLocation(2, 2), 2);
 		assertEquals(11, css2.size());
 		assertFalse(css2.isEmpty());
 
-		CoreSubsets css3 = css1.intersection(css2);
+		var css3 = css1.intersection(css2);
 		assertTrue(css3.isCore(new CoreLocation(0, 0, 2)));
 		assertTrue(css3.isCore(new CoreLocation(0, 0, 3)));
 		assertTrue(css3.isCore(new CoreLocation(1, 1, 1)));
@@ -155,13 +143,13 @@ public class TestCoreSubsets {
 	}
 
 	public void testEquals() {
-		CoreSubsets css1 = new CoreSubsets();
-		css1.addCores(new ChipLocation(0, 0), Arrays.asList(1, 2, 3));
-		css1.addCores(new ChipLocation(0, 1), Arrays.asList(1, 2, 3));
+		var css1 = new CoreSubsets();
+		css1.addCores(new ChipLocation(0, 0), List.of(1, 2, 3));
+		css1.addCores(new ChipLocation(0, 1), List.of(1, 2, 3));
 
-		CoreSubsets css2 = new CoreSubsets();
-		css2.addCores(new ChipLocation(0, 0), Arrays.asList(1, 2, 3));
-		css2.addCores(new ChipLocation(0, 1), Arrays.asList(1, 3));
+		var css2 = new CoreSubsets();
+		css2.addCores(new ChipLocation(0, 0), List.of(1, 2, 3));
+		css2.addCores(new ChipLocation(0, 1), List.of(1, 3));
 
 		assertNotEquals(css1, css2);
 		assertNotEquals(css1.toString(), css2.toString());
@@ -176,11 +164,11 @@ public class TestCoreSubsets {
 	}
 
 	public void testIterator() {
-		CoreSubsets css1 = new CoreSubsets();
-		css1.addCores(new ChipLocation(0, 0), Arrays.asList(1, 2, 3));
-		css1.addCores(new ChipLocation(0, 1), Arrays.asList(1, 2, 3));
+		var css1 = new CoreSubsets();
+		css1.addCores(new ChipLocation(0, 0), List.of(1, 2, 3));
+		css1.addCores(new ChipLocation(0, 1), List.of(1, 2, 3));
 		int count = 0;
-		for (CoreLocation coreLocation : css1) {
+		for (var coreLocation : css1) {
 			count += 1;
 			assertThat("p > 0", coreLocation.getP(), greaterThan(0));
 			assertThat("p < 4", coreLocation.getP(), lessThan(4));
@@ -189,12 +177,12 @@ public class TestCoreSubsets {
 	}
 
 	public void testByChip() {
-		CoreSubsets css1 = new CoreSubsets();
-		css1.addCores(new ChipLocation(0, 0), Arrays.asList(1, 2, 3));
-		css1.addCores(new ChipLocation(0, 1), Arrays.asList(1, 2, 3));
+		var css1 = new CoreSubsets();
+		css1.addCores(new ChipLocation(0, 0), List.of(1, 2, 3));
+		css1.addCores(new ChipLocation(0, 1), List.of(1, 2, 3));
 		int count = 0;
-		for (ChipLocation chip : css1.getChips()) {
-			for (CoreLocation core : css1.coreByChip(chip)) {
+		for (var chip : css1.getChips()) {
+			for (var core : css1.coreByChip(chip)) {
 				count += 1;
 				assertEquals(core.getX(), chip.getX());
 				assertEquals(core.getX(), chip.getX());
@@ -202,8 +190,8 @@ public class TestCoreSubsets {
 		}
 		assertEquals(6, count);
 		count = 0;
-		for (ChipLocation chip : css1.getChips()) {
-			for (Integer p : css1.pByChip(chip)) {
+		for (var chip : css1.getChips()) {
+			for (var p : css1.pByChip(chip)) {
 				count += 1;
 				assertThat("p > 0", p, greaterThan(0));
 				assertThat("p < 4", p, lessThan(4));
@@ -213,18 +201,17 @@ public class TestCoreSubsets {
 	}
 
 	public void testBadIterator() {
-		CoreSubsets css1 = new CoreSubsets();
+		var css1 = new CoreSubsets();
 		int count = 0;
-		for (@SuppressWarnings("unused") CoreLocation coreLocation : css1) {
+		for (@SuppressWarnings("unused") var coreLocation : css1) {
 			count += 1;
 		}
 		assertEquals(0, count);
 
-		Collection<CoreLocation> empty =
-				css1.coreByChip(ChipLocation.ZERO_ZERO);
+		var empty = css1.coreByChip(ZERO_ZERO);
 		assertEquals(0, empty.size());
 
-		Collection<Integer> emptyP = css1.pByChip(ChipLocation.ZERO_ZERO);
+		var emptyP = css1.pByChip(ZERO_ZERO);
 		assertEquals(0, emptyP.size());
 
 		assertThrows(NoSuchElementException.class, () -> {
